K1J-1526: Convert XML bean configurations to Java-based configurations