@@ -18,16 +18,13 @@
  */
 package se.inera.intyg.rehabstod.config;
 
-import jakarta.annotation.PostConstruct;
-import java.util.ArrayList;
-import java.util.Arrays;
-import org.apache.cxf.Bus;
+import java.util.List;
+import org.apache.cxf.bus.spring.SpringBus;
 import org.apache.cxf.ext.logging.LoggingFeature;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.ImportResource;
 import org.springframework.context.annotation.PropertySource;
 import org.springframework.context.support.PropertySourcesPlaceholderConfigurer;
 import org.springframework.context.support.ResourceBundleMessageSource;
@@ -44,7 +41,6 @@ import se.inera.intyg.rehabstod.web.filters.UnitSelectedAssuranceFilter;
 @PropertySource(
     ignoreResourceNotFound = true,
     value = {"classpath:application.properties", "file:${dev.config.file}"})
-@ImportResource({"classpath:META-INF/cxf/cxf.xml"})
 @ComponentScan({
   "se.inera.intyg.rehabstod.logging",
   "se.inera.intyg.rehabstod.integration.it",
@@ -58,8 +54,6 @@ import se.inera.intyg.rehabstod.web.filters.UnitSelectedAssuranceFilter;
 })
 public class ApplicationConfig implements TransactionManagementConfigurer {
 
-  @Autowired private Bus bus;
-
   @Autowired private PlatformTransactionManager transactionManager;
 
   @Bean
@@ -67,9 +61,10 @@ public class ApplicationConfig implements TransactionManagementConfigurer {
     return new PropertySourcesPlaceholderConfigurer();
   }
 
-  @PostConstruct
-  public Bus init() {
-    bus.setFeatures(new ArrayList<>(Arrays.asList(loggingFeature())));
+  @Bean(name = "cxf")
+  public SpringBus springBus() {
+    SpringBus bus = new SpringBus();
+    bus.setFeatures(List.of(loggingFeature()));
     return bus;
   }
 
